--- a/assets/desktop.ini
+++ b/assets/desktop.ini
@@ -1,3 +1,7 @@
 [LocalizedFileNames]
 klix5.jpg=@klix5,0
 klix6.jpg=@klix6,0
+vijesti2.jpg=@vijesti2,0
+vijesti1.jpg=@vijesti1,0
+vijesti3.jpg=@vijesti3,0
+vijesti.jpg=@vijesti,0
